--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "tailwind-config-viewer": "tailwind-config-viewer -o"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.3.0-beta3",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0",
+    "@fortawesome/vue-fontawesome": "^2.0.6",
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
