--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   },
   "devDependencies": {
     "@nuxt/postcss8": "^1.1.3",
+    "@nuxtjs/eslint-config": "^8.0.0",
     "autoprefixer": "^10.4.2",
+    "eslint": "^8.8.0",
     "postcss": "^8.4.6",
     "tailwind-config-viewer": "^1.6.3",
     "tailwindcss": "^3.0.18"
