--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
-    "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
@@ -28,6 +27,8 @@
     "eslint": "^8.8.0",
     "postcss": "^8.4.6",
     "tailwind-config-viewer": "^1.6.3",
-    "tailwindcss": "^3.0.18"
+    "tailwindcss": "^3.0.18",
+    "vue-svg-loader": "^0.16.0",
+    "vue-template-compiler": "^2.6.14"
   }
 }
